--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "aviaxmusic",
   "version": "1.0.0",
-  "description": "Node needed for pytgcalls",
   "engines": {
     "node": "20.x"
   },
   "scripts": {
-    "start": "echo 'Node.js ready'"
+    "start": "echo 'Node.js working'"
   }
 }
