--- a/package.json
+++ b/package.json
@@ -1,10 +1,1 @@
-{
-  "name": "aviaxmusic",
-  "version": "1.0.0",
-  "engines": {
-    "node": "20.x"
-  },
-  "scripts": {
-    "start": "echo 'Node.js working'"
-  }
-}
+{ "engines": { "node": ">=15.0.0" } }
